# lazyaml

./: .gitignore  pyproject.toml
