[project]
name = "lazyaml"
version = "6.0.4"
description = "pyyaml for lazy version"
readme = "README.md"

authors = [
    {name = "teeaz", email = "teeaz@github.com"},
]
dependencies = []
requires-python = ">=3.6"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/teeaz/lazyaml"

[tool]
[tool.pdm]
includes = [
  "README.md",
  "yaml/*.py"
]


[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
